# cortexia_video

./: .augment_guidelines  .dockerignore  .gitignore  .gitmodules  .roomodes  .taskmasterconfig  AGENT.md  AGENTS.md  DOCS_PLAN.md  Dockerfile  README.md  batch_processing_plan.md  clip_feature.py  describe_anything_self_contained.py  just_download.py  main.py  pyproject.toml  read_feature.py  recognize_anything_demo.py  setup.py  test.py  test_clip.py  test_list.py
.claude/: settings.json
chores/: clip_feature.py  test_clip.py  test_depth.ipynb  test_detection.py  test_list.py  test_segmentation.py
config/: config.toml  config.yml  default_extra_tags.json  example_config.toml  exmaple.config.toml  heavy_mode.toml  light_mode.toml
cookbook/: basic_usage.ipynb  basic_usage.py  lance.ipynb  lance.py  use_with_lance.ipynb  use_with_lance.py  use_with_ray.py
cortexia/: __init__.py
cortexia_video/: ImageCaption.py  __init__.py  clip_feature.py  clip_wrapper.py  config_manager.py  data_io.py  depth_estimation.py  feature_extraction.py  logger_setup.py  main.py  object_description.py  object_detection.py  object_listing.py  object_segmentation.py  parser.py  processing_manager.py  sam2_object_segmentation.py  schemes.py  utils.py  visualization.py
data/: trigger_20250613_142507_0
docs/: DATA_FLOW.md  IMPROVEMENT.md  MODULAR_ARCHITECTURE.md  README.md  TEST_FRAMEWORK.md  batch_depth_estimation_usage.md
scripts/: README.md  batch_depth_estimation.py  batch_processor.py  batch_processor_example.py  caption_images.py  detect_segment_images.py  lance_example.py  tag_images.py  zips_io.py
tests/: __init__.py  test_base.py  test_caption_feature.py  test_detection_feature.py  test_gates.py  test_listing_feature.py  test_prompt_injection.py  test_pyarrow_structs.py  test_registry.py  test_segmentation_feature.py  test_use_with_ray_row_limit.py  (+1 more)
(+144 files in other folders)
